# ChangeLog for app-sci/qcad
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-sci/qcad/ChangeLog,v 1.19 2004/04/21 12:01:11 phosphan Exp $

*qcad-2.0.3.1 (21 Apr 2004)

  21 Apr 2004; Patrick Kursawe <phosphan@gentoo.org> qcad-2.0.3.1.ebuild,
  files/qcad-2.0.3.1-1.src-gentoo.patch:
  Version bump. Patch had to be modified because overriding CXXFLAGS broke
  things the way it was done before.

  01 Apr 2004; Patrick Kursawe <phosphan@gentoo.org> qcad-2.0.2.0.ebuild:
  Stable for x86 and ppc.

  26 Mar 2004; Patrick Kursawe <phosphan@gentoo.org> qcad-1.5.4.ebuild,
  qcad-2.0.1.0.ebuild, qcad-2.0.2.0.ebuild:
  Adding inherit eutils and IUSE

*qcad-2.0.2.0 (11 Feb 2004)

  11 Feb 2004; Patrick Kursawe <phosphan@gentoo.org> qcad-2.0.2.0.ebuild:
  Version bump with a few changes, see bug #39804 for details.

  10 Feb 2004; Patrick Kursawe <phosphan@gentoo.org> qcad-2.0.1.0.ebuild:
  Reverting changes - uses need-qt again, this should fix bugs #39804 and
  hopefully #38902

  03 Jan 2004; Caleb Tennis <caleb@gentoo.org> qcad-2.0.1.0.ebuild:
  Remove need-qt, set dependency directly in ebuild.
  Remove inherit of kde-functions.

  21 Oct 2003; Brandy Westcott brandy@gentoo.org qcad-2.0.1.0.ebuild:
  Added patch to allow qcad to compile using CXXFLAGS

*qcad-2.0.1.0 (10 Oct 2003)

  10 Oct 2003; Patrick Kursawe <phosphan@gentoo.org> qcad-2.0.1.0.ebuild:
  Version bump. Moved some stuff from compile to unpack where it belongs, had to
  remove the line setting QTDIR from build.sh, looks like an upstream mistake.
  Tried to report, but the developer's mailbox was full.

*qcad-2.0.0.8 (02 Oct 2003)

  02 Oct 2003; Markus Nigbur <pyrania@gentoo.org> qcad-2.0.0.8.ebuild:
  Bump

*qcad-2.0.0.1 (24 Sep 2003)

  24 Sep 2003; Patrick Kursawe <phosphan@gentoo.org> qcad-2.0.0.1.ebuild:
  New ebuild for version 2. Suggestion from bug 29376.

*qcad-1.5.4 (22 Nov 2002)
