@@ -1,7 +1,7 @@
 MD5 6510e0b2d6a5c6f31b3a59b4c931cf92 qcad-2.0.2.0.ebuild 1572
 MD5 586acdf51180d3b6a01ae4f4ea83ee84 qcad-2.0.1.0.ebuild 1201
-MD5 6e2593e81499e2177a2346073713526b qcad-2.0.3.1.ebuild 1930
-MD5 8cdc4bfa28caa64725526941acf10c0a ChangeLog 2917
+MD5 5ae6409b18abe04e69e2f98791c9adcf qcad-2.0.3.1.ebuild 2127
+MD5 574e1855b91993b937d7c35ceab09552 ChangeLog 3041
 MD5 8c623e53daafa025137077c6b65815bd metadata.xml 156
 MD5 03a389a58ed129eda4567585a4094a33 files/qcad-2.0.3.1-1.src-gentoo.patch 2177
 MD5 ec141f17f0419be4c51b80ed330f4d35 files/qcad-2.0.1.0-1.src-gentoo.patch 2409
