@@ -1,6 +1,9 @@
 # ChangeLog for app-sci/qcad
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-sci/qcad/ChangeLog,v 1.19 2004/04/21 12:01:11 phosphan Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/qcad/ChangeLog,v 1.20 2004/04/22 08:36:16 phosphan Exp $
+
+  22 Apr 2004; Patrick Kursawe <phosphan@gentoo.org> qcad-2.0.3.1.ebuild:
+  Added hint about parts library to pkg_postinst
 
 *qcad-2.0.3.1 (21 Apr 2004)
 
